@@ -1,6 +1,7 @@
 [OPTIONS]
 map_difference =  True
 map_seasons    =  True
+map_season_difference = True
 reichler_plot  =  True
 gleckler_plot   =  True
 hovmoeller_plot   =  False
@@ -24,15 +25,15 @@ projection     = robin
 obs_file =  #get_data_pool_directory() + 'nix.nc'#
 obs_var  =  nixvar
 scale_data = 1.
-gleckler_position = 4
+gleckler_position = 1
 add_to_report = False
-valid_mask = global
+valid_mask = land
 
 [GPCC]
 obs_file =  #get_data_pool_directory() + 'variables/land/precipitation/GPCC/gpcc_full_vs4_1951-2007.nc'#
 obs_var  =  var260 XXXX problem is that the data has no valid grid information, so cdo remapcon does not work!!
 scale_data = 1.
-gleckler_position = 4
+gleckler_position = 2
 add_to_report = False
 valid_mask = land
 
@@ -41,7 +42,7 @@ obs_file =  #get_data_pool_directory() + 'data_sources/HOAPS/DATA/HOAPS-G.T63_MO
 obs_var  =  rain
 scale_data = 1.
 gleckler_position = 1
-add_to_report = True
+add_to_report = False
 valid_mask = ocean
 start = 1987-01-01
 stop  = 2005-12-31
@@ -52,5 +53,5 @@ obs_var  =  precip
 scale_data = 1.
 gleckler_position = 3
 add_to_report = True
-valid_mask = global
+valid_mask = land
 
