@@ -1,6 +1,7 @@
 [OPTIONS]
 map_difference =  True
 map_seasons    =  True
+map_season_difference = False
 reichler_plot  =  True
 gleckler_plot   =  True
 hovmoeller_plot   =  False
